[gd_scene load_steps=8 format=2]

[ext_resource path="res://Actors/Mobs/Mob.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Mobs/squid.png" type="Texture" id=2]
[ext_resource path="res://Actors/ActorData.gd" type="Script" id=3]

[sub_resource type="Resource" id=4]
resource_local_to_scene = true
script = ExtResource( 3 )
max_health = 10
health = 10
max_stamina = 2.0
stamina_regen_per_second = 0.2
stamina = 2.0
boost_stamina_cost_per_second = 1.0
boost_speed_multiplier = 2
speed = 40
carry_orb = false
orb_persistant = false
orb_color = Color( 0, 0, 0, 1 )

[sub_resource type="CircleShape2D" id=2]
radius = 120.0

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "attack_damage_player"
}, {
"args": [  ],
"method": "stop_attack"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 6.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionPolygon2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 6.0, 0.0 ]
}

[node name="MobSquid" type="KinematicBody2D" groups=["mob"]]
script = ExtResource( 1 )
np_sprite = NodePath("Sprite")
np_move_animation_player = NodePath("MoveAnimationPlayer")
data = SubResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -6, -71, 11, -68, 30, -43, 35, -16, 27, 13, 45, 19, 68, 48, 43, 48, 52, 62, 27, 61, 9, 52, -5, 75, -11, 51, -30, 57, -67, 53, -56, 39, -32, 24, -45, 0, -45, -29, -32, -55, -20, -67 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="DetectionArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea2D"]
shape = SubResource( 2 )

[node name="AttackAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 3 )

[node name="MoveAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walk = SubResource( 5 )

[connection signal="body_entered" from="DetectionArea2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="DetectionArea2D" to="." method="_on_Area2D_body_exited"]
